--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Indigo Grigg
 logo: assets/img/
 description: Hi I'm Indigo spatial analyst and science enthusiast
 show_downloads: false
-theme: jekyll-them-minimal
+theme: jekyll-theme-minimal
