--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Indigo Grigg
+title: 
 logo: /assets/Original-colour-bar-static-test-image-used-in-analogue-television-II-METHODOLOGY.png
-description: Hi I'm Indigo spatial analyst and science enthusiast
+description: Hi I'm Indigo Grigg spatial analyst and science enthusiast
 show_downloads: false
 theme: jekyll-theme-minimal
