--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: 
+title: HI
 logo: /assets/200px-Square_Yellow.svg.png
 description: Hi I'm Indigo Grigg spatial analyst and science enthusiast
 show_downloads: false
